--- a/photo.html
+++ b/photo.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>MY NAME IS JEMILY</h1>
-    <img src="images/" width="90" height="120" alt="profile">
+    <img src="images/Jemmy.jpg" width="90" height="120" alt="profile">
 </body>
 </html>
